src/objects/Product_Comment_Code__c.object
<CustomObject>
    <description>This hosts the Product and Comment Code Associations.</description>
    <fields>
        <fullName>GCR_PCID__c</fullName>
        <description>External Id for Integrations</description>
        <externalId>true</externalId>
        <label>GCR PCID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global_Comment_Code_Path__c</fullName>
        <formula>Global_Comment_Code__r.Full_Comment_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Comment Code Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Comment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Global Comment Code that is linked to the Global Product related to this record.</description>
        <inlineHelpText>This is the Global Comment Code that is linked to the Global Product related to this record.</inlineHelpText>
        <label>Global Comment Code</label>
        <referenceTo>Global_Comment_Code__c</referenceTo>
        <relationshipLabel>Product Comment Codes</relationshipLabel>
        <relationshipName>Product_Comment_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Product_Brand__c</fullName>
        <externalId>true</externalId>
        <label>Global Product Brand</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_Path__c</fullName>
        <formula>Global_Product__r.Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Product Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_Segment__c</fullName>
        <externalId>true</externalId>
        <label>Global Product Segment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Global Product associated with this record</description>
        <label>Global Product</label>
        <referenceTo>Global_Product__c</referenceTo>
        <relationshipLabel>Product Comment Codes (Global Product)</relationshipLabel>
        <relationshipName>Product_Comment_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Comment Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Global_Product__c</columns>
        <columns>Global_Product_Brand__c</columns>
        <columns>Global_Product_Segment__c</columns>
        <columns>Global_Comment_Code_Path__c</columns>
        <columns>GCR_PCID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Global_Comment_Code_Path__c</field>
            <operation>contains</operation>
            <value>absorb</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Braun_restatements</fullName>
        <columns>NAME</columns>
        <columns>Global_Product_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Global_Product_Brand__c</field>
            <operation>equals</operation>
            <value>Braun</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Braun restatements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dentifrice_Frozen</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Global_Comment_Code_Path__c</columns>
        <columns>Global_Product_Brand__c</columns>
        <columns>Global_Product_Segment__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Dentifrice</value>
        </filters>
        <filters>
            <field>Global_Comment_Code_Path__c</field>
            <operation>contains</operation>
            <value>Frozen</value>
        </filters>
        <label>Dentifrice Frozen</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pauls_View</fullName>
        <columns>NAME</columns>
        <columns>Global_Product_Brand__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Product_Segment__c</columns>
        <columns>Global_Comment_Code__c</columns>
        <columns>Global_Comment_Code_Path__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_PCID__c</field>
            <operation>equals</operation>
            <value>10900180,10914158,10814503</value>
        </filters>
        <label>Pauls View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCC-{0000}</displayFormat>
        <label>Product Comment Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Comment Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>